# CONSPECTIUS

./: .black  .dockerignore  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pre-commit  pyproject.toml  transcription.txt
app/: cmd_message.py  conversion_txt_to_docx.py  handlers.py  handling.py  keyboards.py  logger.py  main.py  main_processing.py  promt_for_gpt.py  transcribing.py
app/core/: __init__.py  handling.py  promt_for_gpt.py  states.py  transcribing.py
app/core/promts_for_gpt/: max_promt.py  middle_promt.py  (+1 more)
app/database/: __init__.py  check_subscription_status.py  config.py  insert_payment_data.py
app/databases/: __init__.py  db.py
app/errors/: __init__.py  base.py  empty_text.py  not_audio_file.py  unsupported_extension.py
app/etc/: check_file_exists.py  split_text.py
app/exceptions/: __init__.py  base.py  input_errors.py
app/handlers/: __init__.py  admin_handlers.py  any_text.py  donate.py  errors_send.py  handle_voice_message.py  mainprocessing.py  mainstream.py  payments.py  preprocessing.py  start.py
app/keyboards/: __init__.py  keyboards.py
app/mysql/: db.py
app/received_txt/: example.docx
app/templates/: __init__.py  cmd_message.py  edit_message_stage.py  error_cmd_message.py  send_error_message.py
app/tests/: test_split_text.py  test_trans.txt
app/utils/: __init__.py  check_file_exists.py  conversion_txt_to_docx.py  convert_seconds.py  count_tokens.py  get_length_audio.py  part_of_text.py  remove_markdown.py  split_text.py  upload_file.py
sql/init/: init.sql
(+6 files in other folders)
