[tool.poetry]
name = "conspectius"
version = "1.0.0"
description = "A program that creates notes based on audio lectures"
authors = ["Alexander Volzhanin <alexandervolzhanin2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.33.0"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
assemblyai = "^0.27.0"
aiogram = "^3.7.0"
python-docx = "^1.1.2"
mysql-connector-python = "^8.4.0"
tiktoken = "^0.7.0"
pytest = "^8.3.4"
black = "^24.10.0"
pre-commit = "^4.0.1"
isort = "^5.13.2"
flake8 = "^7.1.1"
aiomysql = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
